--- a/src/runtime/assets/style.css
+++ b/src/runtime/assets/style.css
@@ -17,3 +17,8 @@
         display: none !important;
     }
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:focus {
+    transition: background-color 0s 600000s, color 0s 600000s !important;
+}
