fix(NInput): Set min-height for textarea (#32)

--- a/src/runtime/assets/style.css
+++ b/src/runtime/assets/style.css
@@ -22,3 +22,7 @@ input:-webkit-autofill,
 input:-webkit-autofill:focus {
     transition: background-color 0s 600000s, color 0s 600000s !important;
 }
+
+.n-input__textarea-mirror {
+    min-height: var(--n-height);
+}
