style: Fix input auto-fill text color

--- a/src/runtime/assets/style.css
+++ b/src/runtime/assets/style.css
@@ -19,8 +19,10 @@
 }
 
 input:-webkit-autofill,
+input:-webkit-autofill:hover,
 input:-webkit-autofill:focus {
     transition: background-color 0s 600000s, color 0s 600000s !important;
+    -webkit-text-fill-color: var(--n-text-color);
 }
 
 .n-input__textarea-mirror {
