fix(n-button): fix potential unapplied bg color on hover
closes (#52)
related (#12, #8)

--- a/src/runtime/assets/style.css
+++ b/src/runtime/assets/style.css
@@ -1,8 +1,7 @@
-.n-button:default {
-    background-color: var(--n-color) !important;
-}
-
-.n-button {
+button,
+[type='button'],
+[type='reset'],
+[type='submit'] {
     background-color: var(--n-color);
 }
 
